--- a/packages/hw-wallets/.eslintrc.json
+++ b/packages/hw-wallets/.eslintrc.json
@@ -11,6 +11,7 @@
   "root": true,
   "globals": {},
   "rules": {
+    "no-restricted-syntax": "off",
     "class-methods-use-this": "off",
     "@typescript-eslint/no-var-requires": "off",
     "no-multi-assign": "off",
