--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -61,6 +61,7 @@
     "@polkadot/rpc-provider": "^8.0.2",
     "@polkadot/types": "^8.0.2",
     "@rollup/plugin-commonjs": "^21.0.2",
+    "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.1.3",
     "@rollup/plugin-typescript": "^8.3.1",
     "@types/mocha": "^9.1.0",
