--- a/packages/extension/.eslintrc.json
+++ b/packages/extension/.eslintrc.json
@@ -21,6 +21,7 @@
     "@typescript-eslint/no-explicit-any": "off",
     "@typescript-eslint/no-var-requires": "off",
     "vue/multi-word-component-names": "off",
-    "@typescript-eslint/no-unused-vars": "warn"
+    "@typescript-eslint/no-unused-vars": "warn",
+    "@typescript-eslint/no-non-null-assertion": "off"
   }
 }
