--- a/packages/extension/src/manifest/manifest-chrome.json
+++ b/packages/extension/src/manifest/manifest-chrome.json
@@ -37,7 +37,7 @@
       "all_frames": false
     }
   ],
-  "description": "Enkrypt Chrome Extension - One extension to rule them all",
+  "description": "Enkrypt Chrome Extension - Everything in the blockchain made easy",
   "icons": {
     "16": "assets/img/icons/icon16.png",
     "32": "assets/img/icons/icon32.png",
