devop: 🔧 verify screens

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,6 @@
       "directory": "./packages/extension",
       "changeProcessCWD": true
     }
-  ]
+  ],
+  "cSpell.words": ["enkrypt", "enkryptcom", "polkadot", "webextension"]
 }
