--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -33,6 +33,7 @@
     "@types/less": "^3.0.3",
     "@types/lodash": "^4.14.182",
     "@types/utf-8-validate": "^5.0.0",
+    "@vueuse/core": "^8.7.5",
     "add": "^2.0.6",
     "bignumber.js": "^9.0.2",
     "bip39": "^3.0.4",
