--- a/packages/hw-wallets/package.json
+++ b/packages/hw-wallets/package.json
@@ -39,7 +39,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/<FILL_IT>"
+    "url": "git+https://github.com/enkryptcom/enKrypt/tree/main/packages/hw-wallets"
   },
   "keywords": [],
   "author": "kvhnuke",
