--- a/packages/hw-wallets/tsconfig.json
+++ b/packages/hw-wallets/tsconfig.json
@@ -1,13 +1,12 @@
 {
   "extends": "./tsconfig.paths.json",
   "compilerOptions": {
-    "lib": ["ESNext", "dom"],
     "moduleResolution": "node",
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "removeComments": true,
     "sourceMap": true,
-    "target": "es5",
+    "target": "esnext",
     "module": "commonjs",
     "outDir": "dist",
     "resolveJsonModule": true,
