--- a/packages/hw-wallets/package.json
+++ b/packages/hw-wallets/package.json
@@ -47,12 +47,13 @@
   "dependencies": {
     "@enkryptcom/types": "^0.0.1",
     "@enkryptcom/utils": "^0.0.1",
+    "@ethereumjs/tx": "^3.5.2",
     "@ledgerhq/errors": "^6.10.0",
     "@ledgerhq/hw-app-eth": "^6.28.2",
     "@ledgerhq/hw-transport": "^6.27.1",
     "@ledgerhq/hw-transport-webusb": "^6.27.1",
     "@ledgerhq/live-common": "^24.0.0",
-    "@polkadot/types": "^8.5.1",
+    "@polkadot/types": "^8.12.2",
     "@zondax/ledger-substrate": "^0.29.0",
     "ethereumjs-util": "^7.1.5",
     "hdkey": "^2.0.1",
