devop: add substrate tx signing

--- a/packages/hw-wallets/package.json
+++ b/packages/hw-wallets/package.json
@@ -54,7 +54,8 @@
     "@ledgerhq/hw-transport-webusb": "^6.27.1",
     "@ledgerhq/live-common": "^24.0.0",
     "@polkadot/types": "^8.12.2",
-    "@zondax/ledger-substrate": "^0.29.0",
+    "@polkadot/util": "^10.0.2",
+    "@zondax/ledger-substrate": "^0.32.0",
     "ethereumjs-util": "^7.1.5",
     "hdkey": "^2.0.1",
     "trezor-connect": "^8.2.8",
