--- a/packages/extension/.eslintrc.json
+++ b/packages/extension/.eslintrc.json
@@ -4,6 +4,9 @@
     "node": true,
     "vue/setup-compiler-macros": true
   },
+  "globals": {
+    "IS_MANIFEST_V3": true
+  },
   "extends": [
     "@vue/prettier/@typescript-eslint",
     "plugin:vue/vue3-recommended",
