--- a/.github/workflows/build-all.yml
+++ b/.github/workflows/build-all.yml
@@ -1,9 +1,9 @@
-name: create github release
+name: Build all and Check VirusTotal
 
 on: [push]
 
 jobs:
-  release:
+  buildAll:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -40,8 +40,16 @@ jobs:
           curl --request GET --url https://www.virustotal.com/api/v3/files/upload_url --header "x-apikey: $VIRUS_TOTAL_API_KEY"
           UPLOAD_URL=`curl --request GET --url https://www.virustotal.com/api/v3/files/upload_url --header "x-apikey: $VIRUS_TOTAL_API_KEY" | jq --raw-output '.data'`
           curl --request POST --url "$UPLOAD_URL" --header "x-apikey: $VIRUS_TOTAL_API_KEY" --header 'Accept: application/json' --header 'Content-Type: multipart/form-data' -F "file=@./packages/extension/release.zip"
-          VIRUS_TOTAL_URL=https://www.virustotal.com/gui/file/$FILE_SHA256
+          VIRUS_TOTAL_URL_CHROME=https://www.virustotal.com/gui/file/$FILE_SHA256
+          docker run --rm -v `pwd`:/home:rw enkrypt-build-container /bin/bash -c "cd packages/extension && yarn build:firefox && yarn zip"
+          FILE_SHA256=`sha256sum  ./packages/extension/release.zip | awk '{print $1}'`
+          curl --request GET --url https://www.virustotal.com/api/v3/files/upload_url --header "x-apikey: $VIRUS_TOTAL_API_KEY"
+          UPLOAD_URL=`curl --request GET --url https://www.virustotal.com/api/v3/files/upload_url --header "x-apikey: $VIRUS_TOTAL_API_KEY" | jq --raw-output '.data'`
+          curl --request POST --url "$UPLOAD_URL" --header "x-apikey: $VIRUS_TOTAL_API_KEY" --header 'Accept: application/json' --header 'Content-Type: multipart/form-data' -F "file=@./packages/extension/release.zip"
+          VIRUS_TOTAL_URL_FIREFOX=https://www.virustotal.com/gui/file/$FILE_SHA256
           curl -H "Authorization: token ${GITHUB_TOKEN}" -X POST \
-            -d "{\"body\": \"Virus Total analysis <br/> \
-                            $VIRUS_TOTAL_URL\"}" \
+            -d "{\"body\": \"Virus Total analysis Chrome: <br/> \
+                            $VIRUS_TOTAL_URL_CHROME <br/> \
+                            Firefox: <br/> \ 
+                            $VIRUS_TOTAL_URL_FIREFOX \"}" \
                             "https://api.github.com/repos/${GITHUB_REPOSITORY}/commits/${GITHUB_SHA}/comments"
