--- a/.github/workflows/build-all.yml
+++ b/.github/workflows/build-all.yml
@@ -48,8 +48,7 @@ jobs:
           curl --request POST --url "$UPLOAD_URL" --header "x-apikey: $VIRUS_TOTAL_API_KEY" --header 'Accept: application/json' --header 'Content-Type: multipart/form-data' -F "file=@./packages/extension/dist/release.zip"
           VIRUS_TOTAL_URL_FIREFOX=https://www.virustotal.com/gui/file/$FILE_SHA256
           curl -H "Authorization: token ${GITHUB_TOKEN}" -X POST \
-            -d "{\"body\": \"Virus Total analysis Chrome: <br/> \
-                            $VIRUS_TOTAL_URL_CHROME <br/> \
-                            Firefox: <br/> \ 
-                            $VIRUS_TOTAL_URL_FIREFOX \"}" \
+            -d "{\"body\": \"Virus total analysis chrome: <br/>$VIRUS_TOTAL_URL_CHROME<br/> \
+                            firefox: <br/> \
+                            $VIRUS_TOTAL_URL_FIREFOX\"}" \
                             "https://api.github.com/repos/${GITHUB_REPOSITORY}/commits/${GITHUB_SHA}/comments"
