feature: dot/ksm swap, ui loading for token lists

--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -53,6 +53,7 @@
     "qrcode.vue": "^3.3.3",
     "trezor-connect": "^8.2.8",
     "url-parse": "^1.5.10",
+    "uuid": "^8.3.2",
     "vue": "^3.2.31",
     "vue-router": "4",
     "vue3-lottie": "^2.1.0",
@@ -74,6 +75,7 @@
     "@types/ethereumjs-abi": "^0.6.3",
     "@types/mocha": "^9.1.0",
     "@types/url-parse": "^1.4.8",
+    "@types/uuid": "^8.3.4",
     "@types/zxcvbn": "^4.4.1",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
