--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -32,9 +32,6 @@
     "@ethereumjs/tx": "^3.5.1",
     "@ledgerhq/hw-transport-webusb": "^6.27.1",
     "@metamask/eth-sig-util": "^4.0.1",
-    "@polkadot/ui-shared": "^2.8.2",
-    "@polkadot/util": "^10.0.2",
-    "@polkadot/wasm-crypto": "^6.2.3",
     "@types/chrome": "^0.0.180",
     "@types/events": "^3.0.0",
     "@types/less": "^3.0.3",
@@ -67,10 +64,14 @@
     "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
-    "@polkadot/api": "^8.12.2",
+    "@polkadot/api": "^8.14.1",
     "@polkadot/extension-inject": "^0.44.1",
-    "@polkadot/rpc-provider": "^8.12.2",
-    "@polkadot/types": "^8.12.2",
+    "@polkadot/rpc-provider": "^8.14.1",
+    "@polkadot/types": "^8.14.1",
+    "@polkadot/types-known": "^8.14.1",
+    "@polkadot/ui-shared": "^2.9.1",
+    "@polkadot/util": "^10.1.1",
+    "@polkadot/wasm-crypto": "^6.3.1",
     "@rollup/plugin-commonjs": "^21.0.2",
     "@rollup/plugin-inject": "^4.0.4",
     "@rollup/plugin-json": "^4.1.0",
