--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -12,7 +12,7 @@
     "build:rollup": "cross-env minify=on rollup --config configs/rollup.config.contentscript.js && cross-env minify=on rollup --config configs/rollup.config.inject.js",
     "inspectWebpack": "vue-cli-service inspect > webpack.log",
     "test": "ts-mocha --paths -p configs/tsconfig.test.json ./**/*.mocha.ts",
-    "watch": "concurrently 'npm:watch-*(!firefox)'",
+    "watch": "rimraf dist && concurrently 'npm:watch-*(!firefox)'",
     "watch:firefox": "concurrently 'npm:watch-*(!chrome)'",
     "watch-contentscript": "rollup --watch --config configs/rollup.config.contentscript.js",
     "watch-inject": "rollup --watch --config configs/rollup.config.inject.js",
@@ -102,6 +102,7 @@
     "mocha": "^9.2.0",
     "path-browserify": "^1.0.1",
     "prettier": "^2.4.1",
+    "rimraf": "^3.0.2",
     "rollup": "^2.68.0",
     "rollup-plugin-uglify": "^6.0.4",
     "stream-browserify": "^3.0.0",
