--- a/packages/extension/src/manifest/manifest-opera.json
+++ b/packages/extension/src/manifest/manifest-opera.json
@@ -1,5 +1,6 @@
 {
   "manifest_version": 2,
+  "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'",
   "background": {
     "scripts": ["scripts/background.js"],
     "persistent": true
@@ -8,7 +9,7 @@
     "default_icon": {
       "16": "assets/img/icons/icon16.png",
       "32": "assets/img/icons/icon32.png",
-      "48": "assets/img/icons/icon48.png",
+      "64": "assets/img/icons/icon64.png",
       "192": "assets/img/icons/icon192.png"
     },
     "default_title": "Enkrypt",
