devop: bitcoin address display

--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -11,7 +11,7 @@
     "lint": "vue-cli-service lint --fix",
     "build:rollup": "cross-env minify=on rollup --config configs/rollup.config.contentscript.js && cross-env minify=on rollup --config configs/rollup.config.inject.js",
     "inspectWebpack": "vue-cli-service inspect > webpack.log",
-    "test": "ts-mocha --paths -p configs/tsconfig.test.json ./**/*.mocha.ts",
+    "test": "ts-mocha --require ./configs/testNullCompiler.js --paths -p configs/tsconfig.test.json ./**/*.mocha.ts",
     "watch": "rimraf dist && concurrently 'npm:watch-*(!firefox)'",
     "watch:firefox": "concurrently 'npm:watch-*(!chrome)'",
     "watch-contentscript": "rollup --watch --config configs/rollup.config.contentscript.js",
@@ -41,6 +41,7 @@
     "add": "^2.0.6",
     "bignumber.js": "^9.0.2",
     "bip39": "^3.0.4",
+    "bitcoinjs-lib": "^6.0.2",
     "chai": "^4.3.6",
     "concurrently": "^7.0.0",
     "core-js": "^3.21.0",
