escaping quotation mark

--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -12,8 +12,8 @@
     "build:rollup": "cross-env minify=on rollup --config configs/rollup.config.contentscript.js && cross-env minify=on rollup --config configs/rollup.config.inject.js",
     "inspectWebpack": "vue-cli-service inspect > webpack.log",
     "test": "ts-mocha --paths -p configs/tsconfig.test.json ./**/*.mocha.ts",
-    "watch": "rimraf dist && concurrently 'npm:watch-*(!firefox)'",
-    "watch:firefox": "concurrently 'npm:watch-*(!chrome)'",
+    "watch": "rimraf dist && concurrently \"npm:watch-*(!firefox)\"",
+    "watch:firefox": "concurrently \"npm:watch-*(!chrome)\"",
     "watch-contentscript": "rollup --watch --config configs/rollup.config.contentscript.js",
     "watch-inject": "rollup --watch --config configs/rollup.config.inject.js",
     "watch-vue-chrome": "cross-env BROWSER='chrome' vue-cli-service build --watch --no-clean",
