--- a/.github/workflows/macos-deploy.yml
+++ b/.github/workflows/macos-deploy.yml
@@ -10,7 +10,7 @@ jobs:
     steps:
       - uses: maxim-lobanov/setup-xcode@v1
         with:
-          xcode-version: "13.4.1"
+          xcode-version: "latest-stable"
 
       - name: Checkout repository
         uses: actions/checkout@v3
