--- a/.github/workflows/macos-deploy.yml
+++ b/.github/workflows/macos-deploy.yml
@@ -15,9 +15,14 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      - uses: docker-practice/actions-setup-docker@master
+      - run: |
+        set -x
+        docker version
+        docker run --rm hello-world
+
       - name: Install docker and build enkrypt container # Taken from https://github.com/actions/virtual-environments/issues/1143#issuecomment-652264388
         run: |
-          brew install docker
           docker build -t enkrypt-build-container .
 
       - name: Deploy iOS Beta to TestFlight via Fastlane
