fix: build run id

--- a/.github/workflows/macos-deploy.yml
+++ b/.github/workflows/macos-deploy.yml
@@ -35,7 +35,7 @@ jobs:
 
       - uses: actions/upload-artifact@v3
         with:
-          name: safari-build-artifact-${{ $GITHUB_RUN_ID }}
+          name: safari-build-artifact-${{ echo $GITHUB_RUN_ID }}
           path: packages/extension/dist
           retention-days: 1
 
@@ -58,7 +58,7 @@ jobs:
       - name: Retrieve saved safari build
         uses: actions/download-artifact@v3
         with:
-          name: safari-build-artifact-${{ $GITHUB_RUN_ID }}
+          name: safari-build-artifact-${{ echo $GITHUB_RUN_ID }}
           path: packages/extension/dist
 
       - name: Print the run id
