--- a/packages/hw-wallets/package.json
+++ b/packages/hw-wallets/package.json
@@ -55,10 +55,10 @@
     "@ledgerhq/live-common": "^24.1.0",
     "@polkadot/types": "^9.1.1",
     "@polkadot/util": "^10.1.3",
+    "@trezor/connect": "beta",
     "@zondax/ledger-substrate": "^0.34.0",
     "ethereumjs-util": "^7.1.5",
     "hdkey": "^2.0.1",
-    "trezor-connect": "^8.2.10",
     "webextension-polyfill": "^0.9.0"
   }
 }
