--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@enkryptcom/extension",
-  "version": "1.0.3",
+  "version": "1.0.3ff2",
   "private": true,
   "scripts": {
     "zip": "cd dist; zip -r release.zip *;",
