devop: update to bigint

--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@enkryptcom/types": "^0.0.1",
+    "@ethereumjs/util": "^8.0.0",
     "@polkadot/util-crypto": "^10.1.7",
     "bip39": "^3.0.4",
     "chai": "^4.3.6",
