devop: change undefined params in vue router

--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -51,8 +51,8 @@
     "memoize-one": "^6.0.0",
     "moment": "^2.29.4",
     "nanoevents": "^7.0.1",
+    "pinia": "^2.0.22",
     "qrcode.vue": "^3.3.3",
-    "trezor-connect": "^8.2.11",
     "url-parse": "^1.5.10",
     "uuid": "^9.0.0",
     "vue": "^3.2.39",
