chore(trezor): Upgrade Trezor Connect to v9

--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -32,6 +32,7 @@
     "@ethereumjs/tx": "^3.5.2",
     "@ledgerhq/hw-transport-webusb": "^6.27.2",
     "@metamask/eth-sig-util": "^4.0.1",
+    "@trezor/connect": "^9.0.1",
     "@types/chrome": "^0.0.193",
     "@types/events": "^3.0.0",
     "@types/less": "^3.0.3",
@@ -53,7 +54,6 @@
     "moment": "^2.29.4",
     "nanoevents": "^7.0.1",
     "qrcode.vue": "^3.3.3",
-    "trezor-connect": "^8.2.10",
     "url-parse": "^1.5.10",
     "uuid": "^8.3.2",
     "vue": "^3.2.37",
