devop: change safari icons

--- a/packages/extension/src/manifest/manifest-safari.json
+++ b/packages/extension/src/manifest/manifest-safari.json
@@ -3,10 +3,14 @@
   "manifest_version": 3,
   "action": {
     "default_icon": {
-      "16": "assets/img/icons/icon16.png",
-      "32": "assets/img/icons/icon32.png",
-      "64": "assets/img/icons/icon64.png",
-      "192": "assets/img/icons/icon192.png"
+      "16": "assets/img/safari-icons/icon16.png",
+      "19": "assets/img/safari-icons/icon19.png",
+      "32": "assets/img/safari-icons/icon32.png",
+      "38": "assets/img/safari-icons/icon38.png",
+      "48": "assets/img/safari-icons/icon48.png",
+      "64": "assets/img/safari-icons/icon64.png",
+      "72": "assets/img/safari-icons/icon72.png",
+      "192": "assets/img/safari-icons/icon192.png"
     },
     "default_title": "Enkrypt",
     "default_popup": "action.html"
