--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,6 +6,7 @@ on:
       - "v*"
 jobs:
   release:
+    name: new release
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
