--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@commitlint/cli": "^17.4.2",
     "@commitlint/config-conventional": "^17.4.2",
+    "@swc/core": "^1.3.26",
     "concurrently": "^7.6.0",
     "devmoji": "^2.3.0",
     "husky": "^8.0.3",
