--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -19,7 +19,7 @@
     "watch-vue-firefox": "cross-env BROWSER='firefox' vue-cli-service build --watch --no-clean"
   },
   "dependencies": {
-    "@acala-network/api": "^4.1.8-2.3",
+    "@acala-network/api": "^4.1.5",
     "@enkryptcom/extension-bridge": "^0.0.1",
     "@enkryptcom/hw-wallets": "^0.0.1",
     "@enkryptcom/keyring": "^0.0.1",
