devop: improved sparkline

--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -45,6 +45,7 @@
     "chai": "^4.3.7",
     "concurrently": "^7.6.0",
     "core-js": "^3.27.2",
+    "echarts": "^5.4.1",
     "ethereumjs-abi": "^0.6.8",
     "ethereumjs-util": "^7.1.5",
     "ethereumjs-wallet": "^1.0.2",
@@ -59,6 +60,7 @@
     "url-parse": "^1.5.10",
     "uuid": "^9.0.0",
     "vue": "^3.2.47",
+    "vue-echarts": "^6.5.4",
     "vue-router": "4.1.6",
     "vue3-lottie": "^2.4.0",
     "vuedraggable": "^4.1.0",
