--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@enkryptcom/types",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "description": "typescript types for enkrypt packages",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -10,6 +10,7 @@
   "scripts": {
     "build": "tsup src/index.ts --format esm,cjs --dts --clean",
     "lint": "prettier --write .",
+    "version:bumb:patch": "yarn version --immediate patch",
     "test": "echo 'no-tests'"
   },
   "engines": {
