--- a/packages/swap/package.json
+++ b/packages/swap/package.json
@@ -16,13 +16,17 @@
     "node": ">=14.15.0"
   },
   "dependencies": {
-    "@enkryptcom/types": "^0.0.1",
+    "@enkryptcom/types": "workspace:^",
+    "@enkryptcom/utils": "workspace:^",
+    "bignumber.js": "^9.1.1",
     "eventemitter3": "^5.0.0",
     "isomorphic-ws": "^5.0.0",
     "json-rpc-2.0": "^1.5.1",
     "node-fetch": "2.6.9",
     "reconnecting-websocket": "^4.4.0",
     "uuid": "^9.0.0",
+    "web3-eth": "^1.8.2",
+    "web3-utils": "^1.8.2",
     "ws": "^8.13.0"
   },
   "devDependencies": {
