--- a/packages/swap/tsconfig.json
+++ b/packages/swap/tsconfig.json
@@ -11,6 +11,7 @@
     "module": "commonjs",
     "outDir": "dist",
     "resolveJsonModule": true,
+    "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "declaration": true
   },
