--- a/packages/swap/.eslintrc.json
+++ b/packages/swap/.eslintrc.json
@@ -24,6 +24,7 @@
     "@typescript-eslint/ban-ts-comment": "off",
     "no-console": "off",
     "no-plusplus": "off",
+    "@typescript-eslint/no-non-null-assertion": "off",
     "import/extensions": [
       "error",
       "ignorePackages",
