devop: swap class

--- a/packages/swap/package.json
+++ b/packages/swap/package.json
@@ -22,6 +22,7 @@
     "eventemitter3": "^5.0.0",
     "isomorphic-ws": "^5.0.0",
     "json-rpc-2.0": "^1.5.1",
+    "lodash": "^4.17.21",
     "node-fetch": "^2.6.9",
     "reconnecting-websocket": "^4.4.0",
     "uuid": "^9.0.0",
