devop: swap stuff

--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -24,6 +24,7 @@
     "@enkryptcom/keyring": "^0.0.2",
     "@enkryptcom/request": "^0.0.1",
     "@enkryptcom/storage": "^0.0.2",
+    "@enkryptcom/swap": "workspace:^",
     "@enkryptcom/types": "^0.0.1",
     "@enkryptcom/utils": "^0.0.3",
     "@ethereumjs/common": "^3.1.1",
